    the first list and the second to the second one. However, ECL
    would not respect this.

  - TRUENAME now merges a pathname with the current working directory
    when it has no directory of its own. Thus (TRUENAME #P"") is
    equivalent to (SI:GETCWD).

  - The old CLX library has been replaced with the portable CLX
    library from the TELENT archive.

* ANSI compatibility:

  - No symbol is exported from the CL package other than those specificied in
    the standard. ECL extensions, such as the types BYTE8, UNSIGNED-BYTE8,
    are now in the package EXT (which is temporarily an alias of SYSTEM).

  - The following functions have been implemented: BROADCAST-STREAM-STREAMS,
    {ECHO,TWO-WAY}-STREAM-{INPUT,OUTPUT}-STREAM, FILE-STRING-LENGTH,
    INTERACTIVE-STREAM-P (dummy), STREAM-EXTERNAL-FORMAT.

  - The generic function for handling CLOS streams (STREAM-READ-CHAR,
    STREAM-CLEAR-INPUT, etc), are now in the EXT package.

  - HASH-TABLE-REHASH-THRESHOLD can now be any number in (REAL 0 1). Integers
    above 1 are not allowed, and the threshold is always interpreted as the
    relative filling of the hash table before growth (Before, the threshold
    could be an integer number with a somewhat obscure interpretation).

  - SXHASH now always returns positive fixnums and produces the same key for
    two bitvectors which are EQUAL.

  - Implemented the class redefinition protocol, which involves
    CHANGE-CLASS, UPDATE-INSTANCE-FOR-{REDEFINED,NEW}-CLASS, and
    MAKE-INSTANCES-OBSOLETE.

  - There is support for the :CASE argument in all pathname functions
    that require it (Contributed by Julian Stecklina). The function
    PARSE-NAMESTRING now handles the optional host and
    default-pathname arguments properly. MAKE-PATHNAME now signals
    conditions of type FILE-ERROR when the components of the pathname
    have errors (wrong types, '(:ABSOLUTE :BACK), etc).

  - When creating methods, the parameter specializer names are