@@ -1820,6 +1820,9 @@ ECL 0.9d
   - The old CLX library has been replaced with the portable CLX
     library from the TELENT archive.
 
+  - New command line option, -q, makes the compiler quieter (by Julian
+    Stecklina).
+
 * ANSI compatibility:
 
   - No symbol is exported from the CL package other than those specificied in
